--- a/main.css
+++ b/main.css
@@ -1,4 +1,61 @@
 @font-face {
-  font-family: 'Galano';
+  font-family: 'GalanoBold';
   src: url(font/GalanoGrotesqueBold.otf);
+}
+@font-face {
+  font-family: 'GalanoRegular';
+  src: url(font/GalanoGrotesqueAltRegular.otf);
+}
+
+body{
+  background-color: #1a1c22;
+  -webkit-user-select: none;
+  display: flex;
+  flex-direction: column;
+}
+
+div{
+  color: rgb(255, 255, 255);
+}
+.titolo{
+  align-self: start;
+  font-family: 'GalanoBold';
+  display: flex;
+  font-size: 30px;
+  margin-top: 20px;
+  margin-left: 20px; 
+  align-items: center;
+}
+
+.titolo img{
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+
+.contmemoji{
+  align-self: center;
+  justify-self: center;
+  width: 70vw;
+  height: 70vw;
+  background-color: #580ef6;
+  border-radius: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
+  margin-top: 25px;
+  filter: drop-shadow(0 0 25px #580ef6) ;
+}
+.contmemoji img{
+  height: 320px;
+  margin-top: 23px;
+  margin-right: 20px;
+  transition: all 0.3s;
+}
+.contmemoji:hover{
+  scale: 1.03;
+}
+.contmemoji:hover img{
+  height: 350px;
 }
