--- a/main.css
+++ b/main.css
@@ -30,10 +30,11 @@ div{
   margin-top: 20px;
   margin-left: 20px; 
   align-items: center;
+  transition: all 0.5s;
 }
 
 body.sel1 .titolo,
-body.sel2 .titolo,
+body.sel2 .titolo
 {
   scale: 0;
 }
@@ -140,14 +141,12 @@ body.sel2 .titolo,
 body.sel1 .due,
 body.sel2 .uno
 {
-  animation: scompari 1s backwards;
   scale: 0;
 }
 
 body.sel1 .uno,
 body.sel2 .due
 {
-  animation: sali 1s backwards;
   position: absolute;
   top: 40px;
 }
@@ -164,10 +163,80 @@ body.sel2 .contlinee.contlineedue{
 
 
 
+@keyframes vienidadx {
+  100%{
+    opacity: 1;
+    transform: translateX(350px);
+    scale: 0.85;
+  }
+  10%{
+    opacity: 0;
+    transform: translateX(600px);
+    scale: 0.85;
+  }
+  0%{
+    opacity: 0;
+    transform: translateX(600px);
+    scale: 0;
+
+  }  
+}
 
 
 
+@keyframes vaiadx {
+  0%{
+    opacity: 1;
+    transform: translateX(350px);
+    scale: 0.85;
+  }
+  90%{
+    opacity: 0;
+    transform: translateX(600px);
+    scale: 0.85;
+  }
+  100%{
+    opacity: 0;
+    transform: translateX(600px);
+    scale: 0;
 
+  }  
+}
+
+@keyframes vienidasx {
+  100%{
+    opacity: 1;
+    transform: translateX(-350px);
+    scale: 0.85;
+  }
+  10%{
+    opacity: 0;
+    transform: translateX(-600px);
+    scale: 0.85;
+  }
+  0%{
+    opacity: 0;
+    transform: translateX(-600px);
+    scale: 0;
+
+}}  
+@keyframes vaiasx {
+    0%{
+      opacity: 1;
+      transform: translateX(-350px);
+      scale: 0.85;
+    }
+    90%{
+      opacity: 0;
+      transform: translateX(-600px);
+      scale: 0.85;
+    }
+    100%{
+      opacity: 0;
+      transform: translateX(-600px);
+      scale: 0;
+  
+}}  
 
 
 @keyframes ingrandisci {
@@ -185,15 +254,10 @@ body.sel2 .contlinee.contlineedue{
   }
   
 }
-
 @keyframes scompari {
   0%{
     opacity: 1;
     scale: 0.85;
-  }
-  50%{
-    opacity: 0;
-    scale:0.85;
   }
   100%{
     opacity: 0;
@@ -233,7 +297,7 @@ body.sel2 .contlinee.contlineedue{
     
 }
 
-@media only screen and (max-width: 450px) 
+@media only screen and (max-width: 455px) 
 {
  body{
   background-color: red;
@@ -252,3 +316,37 @@ body.sel2 .contlinee.contlineedue{
     scroll-snap-stop: always;
   }
 }
+
+
+@keyframes comprog{
+0%{
+  scale: 0;
+  opacity: 0;
+  top: 85%;
+}
+10%{
+  scale: 1;
+  opacity: 0;
+  top: 85%;
+}
+100%{
+  scale: 1;
+  opacity: 1;
+  top: 65%;
+}
+}
+@keyframes scomprog{
+  0%{
+    scale: 1;
+    opacity: 1;
+  }
+  90%{
+    scale: 1;
+    opacity: 0;
+  }
+  100%{
+    scale: 0;
+    opacity: 0;
+  }
+  }
+  
