--- a/Progetti/ProgFede/Oggetti in Ordine/Oio.css
+++ b/Progetti/ProgFede/Oggetti in Ordine/Oio.css
@@ -18,6 +18,7 @@ body{
   background-color: white;
   padding: 10px 20px;
   border-radius: 18px;
+  max-height: 80%;
 }
 .continput{
   display: flex;
