--- a/Progetti/ProgFede/Oggetti in Ordine/Oio.css
+++ b/Progetti/ProgFede/Oggetti in Ordine/Oio.css
@@ -16,9 +16,33 @@ body{
   font-size: 18px;
   overflow: auto;
   background-color: white;
-  padding: 10px 20px;
   border-radius: 18px;
   max-height: 80%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0px;
+  transition: all 0.5s;
+  gap: 0px;
+}
+#myDiv div{
+  background-color: white;
+  padding: 0px 20px;
+  border-radius: 18px;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+body.rim #myDiv{
+  background-color: rgb(228, 228, 238);
+  gap: 10px;
+  padding: 0;
+
+}
+body.rim #myDiv div{
+  padding: 5px 15px;
+  background-color: rgb(219, 96, 96);
+  color: white;
+
 }
 .continput{
   display: flex;
