--- a/Fede/Impegni/index.css
+++ b/Fede/Impegni/index.css
@@ -62,21 +62,64 @@ body{
   gap: calc(10px + 1vw);
   font-size: 17px;
 }
-.impegnosingolo{
+.boximpegno{
+  
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  width: 70%;
+  width: 69vw;
   background-color: #333333;
   border-radius: 18px;
-  padding:20px 30px;
+  max-width: 525px;
+  cursor: pointer;
+  height: min-content;
+  color: white;
+  background-color: black;
+  border-radius: 18px;
+  overflow: hidden;
+
+}
+body.mobile .boximpegno{
+  overflow: auto;
+  grid-auto-flow: column;
+  overflow: scroll;
+  scroll-snap-type: x proximity;
+  scroll-snap-stop: always;
+  scrollbar-width: none;
+}
+
+body.mobile .boximpegno::-webkit-scrollbar{
+  display: none;
+}
+.impegnosingolo{
+  display: grid;
+  width: 70vw;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: #333333;
   max-width: 525px;
   cursor: pointer;
   height: min-content;
   color: white;
   transition: all 0.15s;
+  border-radius: 18px 0 0 18px;
+  padding: 20px 0px 20px 0px;
+}
+body.mobile .impegnosingolo{
+  scroll-snap-align: start;
+}
+
+body.mobile .del{
+  background-color: #ea4e3d;
+  scroll-snap-align: end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 15px;
+  border-radius: 0 18px 18px 0;
 }
 .impegnosingolo.el{
   background-color: #ea4e3d;
+}
+.distanzaimpegno{
+  padding-right: 20px;
 }
 .distanzaimpegno, .dataimpegno{
   display: flex;
@@ -103,6 +146,7 @@ body{
   align-items: center;
 }
 .scrittaimpegno{
+  padding-left: 30px;
   display: flex;
   justify-content: start;
   align-items: center;
