--- a/Fede/Impegni/index.css
+++ b/Fede/Impegni/index.css
@@ -28,6 +28,7 @@ body{
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   user-select: none;
+  overflow-x: hidden;
 }
 #impinput, #datainput{
   font-family: 'SF';
