--- a/NineGame/index.css
+++ b/NineGame/index.css
@@ -10,8 +10,14 @@
   font-family: "SFReg";
   src: url(font/SF-Pro-Display-Regular.ttf);
 }
-
-body {
+.body1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  flex-direction: column;
+}
+.body2{
   display: grid;
   align-items: center;
   justify-items: center;
@@ -22,8 +28,8 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 5px;
+  transition: all 1s;
 }
-
 .quadrato {
   --a: calc(0.3333 * 80vw);
   display: flex;
@@ -52,6 +58,7 @@ body {
   cursor: pointer;
   font-size: 25px;
   color: rgba(0, 0, 0, 0.904);
+  transition: all 1s;
 }
 #cont{
   display: grid;
@@ -72,3 +79,107 @@ body {
   color: rgba(240, 198, 13, 0.616);
   filter: drop-shadow(0 0 5px rgb(229, 255, 0));
 }
+#v{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(87, 98, 134, 0.267);
+  margin: 20px;
+  border-radius: 50px;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+#ar{
+  width: 25px;
+  padding-top:3px;
+  rotate: -90deg;
+  transition: all 0.15s;
+}
+#ar.active{
+  rotate: 0deg;
+}
+body.class #avviabut, body.class #griglia{
+  animation: blurra 1s backwards ease;
+  filter: blur(4px);
+
+}
+.classifica{
+  display: flex;
+
+  padding: 20px 30px;
+  width: 320px;
+  height: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: rgba(114, 141, 228, 0.726);
+  border-radius: 28px;
+  transition: all 1s;
+  overflow: hidden;
+  animation: apri 1s backwards ease;
+  gap: 10px;
+  flex-direction: column;
+}
+.riga{
+  display: grid;
+  font-family: 'SF';
+  grid-template-columns: 1fr 1fr 1fr;
+  font-size: 20px;
+}
+.posizione, .punteggio{
+  color: white;
+}
+.nome{
+  color: rgba(0, 0, 0, 0.404);
+}
+
+@keyframes apri {
+  0%{
+    height: 0;
+    padding: 0;
+  }
+  20%{
+    
+  padding: 20px 30px;
+  }
+  100%{
+    height: 400px;
+    padding: 20px 30px;
+  }
+  
+}
+
+@keyframes chiudi {
+  0%{
+    height: 400px;
+    padding: 20px 30px;
+  }
+  80%{
+    
+    padding: 20px 30px;
+  }
+  100%{
+    height: 0px;
+    padding: 0;
+  }
+  
+}
+
+@keyframes blurra {
+  0%{
+    filter: blur(0px);
+  }
+
+  
+  100%{
+    filter: blur(4px);
+  }
+  
+}
+
