--- a/index.css
+++ b/index.css
@@ -14,14 +14,14 @@
 body{
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: min-content 1fr;
+  grid-template-rows: 150px 1fr 150px;
   justify-content: center;
   align-items: center;
   background-color: black;
   transition: all 1s;
   user-select: none;
   overflow-x: hidden;
-  -webkit-overflow-scrolling: none;
+  -webkit-overflow: hidden;
 }
 .titolo{
 
@@ -68,11 +68,11 @@ body{
 
 }
 .listaf{
-  top: calc(50% + 180px);
+  top: calc(42% + 220px);
   width: 200px;
 }
 .listas{
-  top: 50%;
+  top: 40%;
   width: 150px;
 }
 .lista div{
@@ -136,11 +136,12 @@ body.a20 .spaziodx{
   width: 215px;
 }
 body.a20 .listaf{
-  top: 50%;
+  top: 40%;
   width: 150px;
 }
 
 body.a20 .listas{
-  top: calc(50% + 180px);
+  top: calc(42% + 220px);
   width: 200px;
 }
+
