--- a/index.css
+++ b/index.css
@@ -13,6 +13,8 @@
 :root{
   --quad: 200px;
   --quadactive: 250px;
+  --lsh:0;
+  --lfh:0;
 }
 body{
   display: flex;
@@ -38,7 +40,7 @@ body{
   font-family: 'SF';
   color: rgb(255, 255, 255);
   border-radius: 18px;
-  padding: 10px 15px ;
+  padding: 10px 15px;
   background-color: #333333;
   gap: 5px;
   align-self: flex-start;
@@ -48,15 +50,19 @@ body{
   justify-content: center;
   flex-direction: column;
   transition: all 0.6s ease;
+  overflow: hidden;
 
 }
 .listaf{
   width: 200px;
+  height: var(--lfh);
   translate: 0 20px;
 }
 .listas{
-  width: 100px;
+  width: 0;
   translate: 0 -170px;
+  height: 0;
+  padding: 0;
 }
 .lista div{
   cursor: pointer;
@@ -104,13 +110,19 @@ body.a2 .quadrato.boxS{
   background-color: #f1a43c;
 }
 body.a2 .listaf{
-  width: 100px;
+  width: 0;
   translate: 0 -170px;
+
+  padding: 0 0;
+  height: 0;
 }
 body.a2 .listas{
   top: calc(42% + 220px);
   width: 200px;
   translate: 0 20px;
+
+  height: var(--lsh);
+  padding: 10px 15px;
 }
 body.a2 .box{
   
