--- a/index.css
+++ b/index.css
@@ -1,87 +1,138 @@
 @font-face {
+  font-family: 'Galano';
+  src: url(font/GalanoGrotesqueBold.otf);
+}
+@font-face {
+  font-family: 'SFReg';
+  src: url(font/SF-Pro-Display-Regular.ttf);
+}
+@font-face {
   font-family: 'SF';
   src: url(https://fedespada.com/font/SF-Pro-Display-Bold.ttf);
-}#bird {
-  scale: 1.8;
-  position: relative;
-  top: 50%;
-  left: 5%;
-}body {
+}
+
+:root{
+  --quad: 200px;
+  --quadactive: 250px;
+}
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  transition: all 1s;
+  user-select: none;
+  overflow-x: hidden;
+  -webkit-overflow: hidden;
+}
+.box{
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-columns: 250px 250px;
+  grid-template-rows: 250px 250px;
+  margin-top: 200px;
+  translate: 125px 0;
+  transition: all 0.6s ease;
+} 
+.lista{
+  font-family: 'SF';
+  color: rgb(255, 255, 255);
+  gap: 5px;
+  align-self: flex-start;
+
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  transition: all 0.6s ease;
   overflow: hidden;
-  margin: 0;
-  background-color: #282828;
-  user-select: none;
-}#main {
-  width: 531.56px;
-  height: 945px;
-  background-image: url(assets/background-day.png);
-  background-size: cover;
-  overflow: hidden;
-  position: absolute;
-}#base {
-  position: relative;
-  height: calc(945px / 4);
-  top: calc(100% - calc(945px / 4));
-  left: 0;
-  transform: translate(-10px, 0);
-  z-index: 2;
-}.tubi {
-  position: absolute;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr min-content 1fr;
-  scale: 1.8;
-  transform: translate(420px, -280px);
-}.tubosu {
-  rotate: 180deg;
-  scale: -1 1;
-}.spazio {
-  height: 100px;
-}#box1 {
-  position: absolute;
-  width:  531.56px;
-  height: 945px;
-  background-color: #282828;
-  z-index: 10;
-  transform: translate(-531.56px, 0);
-}#box2 {
-  position: absolute;
-  width: 531.56px;
-  height: 945px;
-  background-color: #282828;
-  z-index: 10;
-  transform: translate(531.56px, 0);
-}#rosso{
-  background-color: red;
-  width: 1px;
-  left: 1px;
-  position: absolute;
-  top:0;
-  left:0;
-  z-index: 10;
-}#message{
-  position: absolute;
-  height: 500px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  z-index: 3;
-}#gameoverimg{
-  position: absolute;
-  position: absolute;
-  width: 340px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  z-index: 3;
-}#numeri{
-  position: absolute; 
-  top: 70px;
-  left: 50%;
-  transform: translate(-50%,0);
-}#numeri img{
-  height: 60px;
+
 }
+.listaf{
+  width: 200px;
+  height: fit-content;
+  translate: 0 20px;
+}
+.listas{
+  width: 0;
+  translate: 0 -170px;
+  padding: 0;
+}
+.lista div{
+  cursor: pointer;
+  background-color: #333333;
+  padding: 5px 10px;
+  border-radius: 5px;
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  transition: all 0.6s ease;
+}
+.quadrato{
+  width: var(--quad);
+  height: var(--quad);
+  border-radius: 25px;
+  transition: all 0.6s ease;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'SF';
+  font-size: 400%;
+  color: white;
+  z-index: 100;
+}
+.quadrato.boxF{
+  width:var(--quadactive);
+  height: var(--quadactive);
+  background-color: #f1a43c;
+}
+.quadrato.boxS{
+  background-color: #333333;
+}
+
+
+
+body.a2 .quadrato.boxF{
+  width: var(--quad);
+  height: var(--quad);
+  background-color: #333333;
+}
+body.a2 .quadrato.boxS{
+  width: var(--quadactive);
+  height: var(--quadactive);
+  background-color: #f1a43c;
+}
+body.a2 .listaf{
+  width: 0;
+  translate: 0 -170px;
+
+  padding: 0 0;
+}
+body.a2 .listas{
+  top: calc(42% + 220px);
+  width: 200px;
+  translate: 0 20px;
+  padding: 10px 15px;
+}
+body.a2 .listas div{
+  translate: 0 0;
+}
+
+
+body.a2 .box{
+  
+  translate: -125px 0;
+}
+
+.trian{
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  translate: -50% 0;
+}
+
+
