--- a/DaysOff/index.css
+++ b/DaysOff/index.css
@@ -70,3 +70,10 @@ svg{
   position: absolute;
   z-index: -1;
 }
+#svgbox{
+  z-index:-1;
+  position:absolute;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
