--- a/calendario/index.css
+++ b/calendario/index.css
@@ -20,13 +20,13 @@
 body{
   display: grid;
   background-color: rgb(247,247,250);
-  grid-template-rows: 60px 1fr 100px;
+  grid-template-rows: min-content 1fr min-content;
   justify-items: center;
   align-items: center;
   margin: 0px;
   gap: 20px;
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: scroll;
 
 }
 .titolo{
@@ -47,24 +47,83 @@ body{
   display: flex;
   flex-direction: column;
 }
+.c{
+
+  display: flex;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  white-space: nowrap;
+
+  width: 80vw;
+  
+  height: 80px;
+}
+.bb{
+  display: grid;
+  height: fit-content;
+  margin-bottom: 20px;
+  border-radius: 18px;
+  overflow: hidden;
+  box-shadow:  5px 5px 7px #e8e8f0,
+               -5px -5px 7px #ffffff;
+}
+.delete{
+  flex: 0 0 100px;
+  scroll-snap-align: end;
+  background-color: #ea4e3d;
+z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 18px;
+  border-radius: 0 18px 18px 0;
+}
+.nota{
+  width: 80vw;
+  background-color: rgba(0, 0, 0, 0.03);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 0px;
+  transition: all 0.15s;
+}
+.nota.open{
+  height: 50px;
+}
+::-webkit-scrollbar {
+  display: none;
+}
 .contenitore-impegno-singolo{
   display: flex;
   justify-content: space-between;
   background-color: rgb(247,247,250);
   align-items: center;
   font-family: 'Galano';
-  width: 80vw;
   cursor: pointer;
-  border-radius: 18px;
-  box-shadow:  5px 5px 7px #e8e8f0,
-               -5px -5px 7px #ffffff;
+  width: 80vw;
+  flex: 0 0 100%;
+  scroll-snap-align: center;
   transition: all 0.15s;
   color: rgb(47, 47, 139);
   font-size: 25px;
   overflow:hidden ;
   height: 80px;
-  margin-bottom: 20px;
   transition: all 0.3s;
+  
+z-index: 1;
+}
+.start,.center,.end{
+  pointer-events: none;
+}
+.bg{
+  position: absolute;
+  width: 80vw;
+  height: 80px;
+  z-index: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 
@@ -195,7 +254,7 @@ img{
   padding-bottom: 20px;
   align-items: center;
   position: absolute;
-  grid-template-rows: 30px 40px 50px 40px 50px min-content 40px 50px 1fr 60px;
+  grid-template-rows: 30px 40px 50px 40px 50px min-content 40px 50px 40px 50px 1fr 60px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -261,7 +320,7 @@ img{
   cursor: pointer;
   justify-self: center;
 }
-.data{
+.data, .notec{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -277,12 +336,19 @@ img{
   height: 20px;
 
 }
-.data input{
+.data input, #notei{
   background: none;
   border: none;
   width: 150px;
   cursor: pointer;
+  font-family: 'SFReg';
+}
+#notei{
+  border: none;
 
+}
+#notei:focus{
+  outline: none;
 }
 .contmateria{
   width: 200px;
@@ -327,6 +393,7 @@ img{
   padding: 7px 14px;
 }
 .materia{
+  font-family: 'SF';
   height: 25px;
   font-size: 18px;
   cursor: pointer;
