--- a/calendario/index.css
+++ b/calendario/index.css
@@ -68,6 +68,18 @@ body{
   box-shadow:  5px 5px 7px #e8e8f0,
                -5px -5px 7px #ffffff;
 }
+.sfondo-gradiente {
+  position:fixed;
+  height: 30px;
+  width: 100%;
+  top: 0;  
+  background-color: rgb(247, 247, 250); /* Colore di fallback */
+  /* Utilizza un gradiente lineare con un angolo di 90 gradi da rgb(247, 247, 250) a trasparente */
+  background: linear-gradient(to bottom, rgba(247, 247, 250, 1), rgba(247, 247, 250, 0));
+  z-index: 2;
+
+}
+
 .delete{
   flex: 0 0 100px;
   scroll-snap-align: end;
